--- a/[2024-2025]_clean_data.ipynb
+++ b/[2024-2025]_clean_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "04399b0a",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "[758 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "85be8843",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "Name: 60, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4a082e44",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0e2790b6",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "Name: 61, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4e2b4305",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b12b89b",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "[735 rows x 30 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c907a991",
    "metadata": {},
    "outputs": [],
@@ -886,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "1b606a54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000023046753230>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FEA3591D30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f3038c80",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "8b178ef3",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1226,7 @@
        "[4 rows x 30 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "b9e91305",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8284\\3552944349.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9948\\3552944349.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1598,7 +1598,7 @@
        "[735 rows x 30 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "0a0c2a4a",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1619,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8284\\2339882511.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9948\\2339882511.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  players = players.groupby([\"Player\", \"Year\"]).apply(single_team)\n"
      ]
     }
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c790565d",
    "metadata": {},
    "outputs": [
@@ -2315,7 +2315,7 @@
        "[20 rows x 30 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "699c2edf",
    "metadata": {},
    "outputs": [],
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "0f8339cd",
    "metadata": {},
    "outputs": [],
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "7594fc5f",
    "metadata": {},
    "outputs": [
@@ -2696,7 +2696,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2707,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "f3f17b3b",
    "metadata": {},
    "outputs": [
@@ -2795,7 +2795,7 @@
        "[1 rows x 30 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2806,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "2ddf6a8f",
    "metadata": {},
    "outputs": [
@@ -2894,7 +2894,7 @@
        "[1 rows x 30 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2913,7 +2913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "eeea64cc",
    "metadata": {},
    "outputs": [
@@ -3523,7 +3523,7 @@
        "34               -8.59  2025    New Orleans Pelicans (14)  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3535,7 +3535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "feb1fc88",
    "metadata": {},
    "outputs": [
@@ -4033,7 +4033,7 @@
        "34    New Orleans Pelicans (14)  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4046,7 +4046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "f6c40205",
    "metadata": {},
    "outputs": [
@@ -4544,7 +4544,7 @@
        "34    New Orleans Pelicans (14)  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4557,7 +4557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "ec5b5e98",
    "metadata": {},
    "outputs": [
@@ -4565,7 +4565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8284\\4265701565.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9948\\4265701565.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5067,7 +5067,7 @@
        "34    New Orleans Pelicans  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5088,7 +5088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "5f1758df",
    "metadata": {},
    "outputs": [],
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "14958822",
    "metadata": {},
    "outputs": [
@@ -5534,7 +5534,7 @@
        "34  21  61  .256  31.0  109.8  119.3   -8.59  2025    New Orleans Pelicans"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5545,7 +5545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "97d33a44",
    "metadata": {},
    "outputs": [
@@ -5594,7 +5594,7 @@
        " 'WSB': 'Washington Bullets'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5615,7 +5615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "99ec53c6",
    "metadata": {},
    "outputs": [
@@ -5807,7 +5807,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5820,7 +5820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "6d694f98",
    "metadata": {},
    "outputs": [
@@ -6168,7 +6168,7 @@
        "[569 rows x 38 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6180,7 +6180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "edabb54c",
    "metadata": {},
    "outputs": [
@@ -6228,7 +6228,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6239,7 +6239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "d5e3b07f",
    "metadata": {},
    "outputs": [
@@ -6247,7 +6247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8284\\908767724.py:2: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9948\\908767724.py:2: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  stats = stats.apply(pd.to_numeric, errors=\"ignore\")\n"
      ]
     },
@@ -6295,7 +6295,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6308,7 +6308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "ae353d93",
    "metadata": {},
    "outputs": [
@@ -6320,7 +6320,7 @@
        "       '51.0', '23.0'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6331,7 +6331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "ed77c767",
    "metadata": {},
    "outputs": [
@@ -6343,7 +6343,7 @@
        "       '51.0', '23.0'], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6356,7 +6356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "66eda703",
    "metadata": {},
    "outputs": [
@@ -6404,7 +6404,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6417,7 +6417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "be966762",
    "metadata": {},
    "outputs": [],
